// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/ProfilePicture should match snapshot, no user specified, default props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
      data-testid="profile-icon"
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      aria-label="Away"
      class="status"
      role="img"
    >
      <span
        aria-hidden="true"
      >
        <span
          aria-label="away"
          class="_status-badge_pwbsc_2 _status-badge--size-x-small_pwbsc_27 _status-badge--status-away_pwbsc_64"
          role="img"
        >
          <span
            class="_status-badge__glyph_pwbsc_13"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M15.535,16.949L11,12.414V7h2v4.586l3.949,3.949L15.535,16.949z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, no user specified, overridden props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
      data-testid="profile-icon"
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-xl"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      aria-label="Away"
      class="status"
      role="img"
    >
      <span
        aria-hidden="true"
      >
        <span
          aria-label="away"
          class="_status-badge_pwbsc_2 _status-badge--size-x-small_pwbsc_27 _status-badge--status-away_pwbsc_64"
          role="img"
        >
          <span
            class="_status-badge__glyph_pwbsc_13"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M15.535,16.949L11,12.414V7h2v4.586l3.949,3.949L15.535,16.949z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, profile and src, default props 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-haspopup="dialog"
    class="status-wrapper style--none"
    style="border-radius: 50%; width: 32px; height: 32px;"
    type="button"
  >
    <span
      class="profile-icon "
      data-testid="profile-icon"
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/emoji.png"
      />
    </span>
    <span
      aria-label="Away"
      class="status"
      role="img"
    >
      <span
        aria-hidden="true"
      >
        <span
          aria-label="away"
          class="_status-badge_pwbsc_2 _status-badge--size-x-small_pwbsc_27 _status-badge--status-away_pwbsc_64"
          role="img"
        >
          <span
            class="_status-badge__glyph_pwbsc_13"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M15.535,16.949L11,12.414V7h2v4.586l3.949,3.949L15.535,16.949z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </button>
</div>
`;

exports[`components/ProfilePicture should match snapshot, user specified 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
      data-testid="profile-icon"
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-md"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      aria-label="Away"
      class="status"
      role="img"
    >
      <span
        aria-hidden="true"
      >
        <span
          aria-label="away"
          class="_status-badge_pwbsc_2 _status-badge--size-x-small_pwbsc_27 _status-badge--status-away_pwbsc_64"
          role="img"
        >
          <span
            class="_status-badge__glyph_pwbsc_13"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M15.535,16.949L11,12.414V7h2v4.586l3.949,3.949L15.535,16.949z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;

exports[`components/ProfilePicture should match snapshot, user specified, overridden props 1`] = `
<div>
  <span
    class="status-wrapper style--none"
  >
    <span
      class="profile-icon "
      data-testid="profile-icon"
    >
      <img
        alt="user profile image"
        class="Avatar Avatar-xs"
        loading="lazy"
        src="http://example.com/image.png"
      />
    </span>
    <span
      aria-label="Away"
      class="status"
      role="img"
    >
      <span
        aria-hidden="true"
      >
        <span
          aria-label="away"
          class="_status-badge_pwbsc_2 _status-badge--size-x-small_pwbsc_27 _status-badge--status-away_pwbsc_64"
          role="img"
        >
          <span
            class="_status-badge__glyph_pwbsc_13"
          >
            <svg
              fill="currentColor"
              height="12"
              version="1.1"
              viewBox="0 0 24 24"
              width="12"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2 M15.535,16.949L11,12.414V7h2v4.586l3.949,3.949L15.535,16.949z"
              />
            </svg>
          </span>
        </span>
      </span>
    </span>
  </span>
</div>
`;
